--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.13.0",
     "vitest": "^3.0.4"
+  },
+  "dependencies": {
+    "crc": "^4.3.2"
   }
 }
